// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to custom close icon with closeIcon prop 1`] = `
<i class="r-badge__wrapper r-icon r-action-sheet__close r-haptics-feedback">
</i>
`;

exports[`should render action slot correctly 1`] = `
<button type="button"
        class="r-action-sheet__item"
>
  name: Option, index: 0
</button>
`;

exports[`should render cancel slot correctly 1`] = `
<button type="button"
        class="r-action-sheet__cancel"
>
  Custom Cancel
</button>
`;

exports[`should render default slot correctly 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
  <div class="r-overlay">
  </div>
</transition-stub>
<transition-stub name="r-popup-slide-bottom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--round r-popup--bottom r-safe-area-bottom r-action-sheet"
  >
    <div class="r-action-sheet__header">
      Title
      <i class="r-badge__wrapper r-icon r-action-sheet__close r-haptics-feedback">
      </i>
    </div>
    <div class="r-action-sheet__content">
      Default
    </div>
  </div>
</transition-stub>
`;

exports[`should render description correctly 1`] = `
<div class="r-action-sheet__description">
  This is a description
</div>
`;

exports[`should render description slot when match snapshot 1`] = `
<div class="r-action-sheet__description">
  Custom Description
</div>
`;

exports[`should render subname correctly 1`] = `
<button type="button"
        class="r-action-sheet__item"
>
  <span class="r-action-sheet__name">
    Option
  </span>
  <div class="r-action-sheet__subname">
    Subname
  </div>
</button>
`;
